# fProyect

./: INSTALLATION_GUIDE.md  README.md  SECURITY_ANALYSIS.md
esp32-device-1/: Cargo.toml  sdkconfig.defaults
esp32-device-1/src/: main.rs  main_secure.rs
esp32-device-2/: Cargo.toml  sdkconfig.defaults
esp32-device-2/src/: main.rs  main_secure.rs
node-red-flows/: esp32-dashboard.json
security/: generate_certificates.sh
